# ShowMIDI-Fork

./: .clang-format  .editorconfig  .gitignore  .yamllint  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DOWNLOAD_STATS.md  README.md  STATISTICS.md  showmidi.jucer
.github/: WORKFLOW_ALIGNMENT_STRATEGY.md  copilot-commit-template.md  copilot-instructions.md  pull_request_template.md  testing-governance.yaml
.github/scripts/: validate-workflow-alignment.sh
.github/testing-governance/: README.md
.github/workflows/: README.md  changelog.yml  ci.yml  download-stats.yml  nightly.yml  phase5-monitoring.yml  release-with-readme-update.yml  release.yml  test-build.yml  update-file-sizes.yml  update-readme-downloads.yml
.specify/memory/: constitution.md  gitflow-implementation-summary.md  gitflow-workflow.md
.specify/scripts/bash/: create-feature.sh  create-hotfix.sh  create-release.sh
Builds/MacOSX/showmidi.xcodeproj/: project.pbxproj
Builds/MacOSX/showmidi.xcodeproj/xcshareddata/xcschemes/: ShowMIDI - Standalone Plugin.xcscheme
Installers/: ShowMIDI.pkgproj
JuceLibraryCode/: AppConfig.h
Scripts/: install-hooks.sh  release-post-process.sh  test-build-local.sh  update-download-links.sh
Scripts/hooks/: pre-commit  pre-push
Scripts/reporting/: generate-run-summary.sh
Scripts/validation/: flake-tracking.schema.json  policy.schema.json  test-run-summary.schema.json  validate-testing-config.sh
Source/: AboutComponent.cpp  AboutComponent.h  DpiScaling.h  LayoutConstants.h  Main.cpp  MainLayoutComponent.cpp  MidiDeviceComponent.cpp  MidiDeviceComponent.h  PaintedButton.cpp  PaintedButton.h  PluginEditor.cpp  PluginEditor.h  PopupColourSelector.cpp  PortListComponent.cpp  SettingsComponent.cpp  SidebarComponent.cpp  SidebarComponent.h  StandaloneDevicesComponent.cpp  Theme.cpp  Theme.h
Source/layout/: Constants.h
Source/utility/: Scaling.h
Tests/: CMakeLists.txt  Main.cpp  README.md
Tests/Fixtures/: IFileProvider.h  IMidiDeviceAdapter.h  ITimeProvider.h  MockMidiAdapter.cpp  MockMidiAdapter.h  SimulatedTimeProvider.cpp  SimulatedTimeProvider.h
Tests/Unit/: ExampleTest.cpp
docs/: README.md  architecture-diagrams.md  component-reference.md  dpi-scaling.md  source-code-analysis.md
docs/images/: .gitkeep
docs/templates/: README-downloads-template.md
docs/testing/: AGENT_GUIDE.md  WORKFLOW_DIAGRAMS.md
specs/001-dpi-scaling/: bugfix-nullptr-crash.md  component-audit-results.md  data-model.md  font-audit.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-dpi-scaling/checklists/: requirements.md
specs/001-dpi-scaling/contracts/: scaling-api.md
specs/001-test-cadence/: spec.md
specs/001-test-cadence/checklists/: requirements.md
specs/002-dev-housekeeping/: COMPLETION_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-dev-housekeeping/checklists/: requirements.md
specs/002-dev-housekeeping/contracts/: CHANGELOG-template.md  CONTRIBUTING-template.md  README.md  clang-format-contract.md  editorconfig-contract.md  file-migration.md  gitignore-contract.md  pr-template-contract.md
specs/003-ci-build-fix/: CODE_REVIEW.md  FIX_ITERATION_TEMPLATE.md  PHASE5_WEEK1_REPORT.md  PHASE5_WEEK4_REPORT.md  REMOTE_TESTING_PLAN.md  REMOTE_TESTING_QUICKSTART.md  REMOTE_TESTING_TASKS.md  VALIDATION_SUMMARY.md  data-model.md  parallel-execution-guide.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ci-build-fix/checklists/: requirements.md
specs/003-ci-build-fix/contracts/: workflow-contracts.md
specs/004-tdd-adoption/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-tdd-adoption/checklists/: ci-cd.md  coverage-policy.md  requirements.md  test-infrastructure.md
specs/004-tdd-adoption/contracts/: ci-matrix.yml  coverage-policy.md  test-protocol.md
specs/005-test-cadence/: CONSOLIDATION-SUMMARY.md  IMPLEMENTATION-PROGRESS.md  IMPLEMENTATION_SUMMARY.md  plan.md  research.md  spec.md  tasks.md
specs/005-test-cadence/archive/: IMPLEMENTATION-SUMMARY.md  data-model-final.md  plan-final.md  quickstart-final.md  research-final.md
specs/005-test-cadence/archive/runs/: data-model-run1.md  data-model-run3.md  plan-run2.md  plan-run3.md  quickstart-run1.md  quickstart-run3.md  research-run3.md
specs/005-test-cadence/contracts/: checks.schema.json  testing-governance-schema.md
